Added Matte Paint Special Links in Nav and Service Pages

--- a/faq/index.html
+++ b/faq/index.html
@@ -233,6 +233,8 @@
                                                 href="/services/blackout-package/">Blackout Package</a></li>
                                         <li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
                                                 href="/services/camera-installation/">Dash Cam Installation</a></li>
+                                        <li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+                                                href="/services/matte-paint-special/">Matte Paint Special</a></li>
                                     </ul>
                                 </li>
                                 <li id="menu-item-1583" class="menu-item menu-item-type-post_type menu-item-object-page page_item page-item-148 menu-item-1583"><a
@@ -283,6 +285,8 @@
                                                 href="/services/blackout-package/">Blackout Package</a></li>
                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
                                                 href="/services/camera-installation/">Camera Installation</a></li>
+                                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+                                                href="/services/matte-paint-special/">Matte Paint Special</a></li>
                                     </ul>
                                 </li>
                                 <li class="menu-item menu-item-type-post_type menu-item-object-page page_item page-item-148 menu-item-1583"><a
