--- a/index.html
+++ b/index.html
@@ -251,6 +251,8 @@
 											 href="/services/blackout-package/">Blackout Package</a></li>
 										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
 											 href="/services/camera-installation/">Dash Cam Installation</a></li>
+										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+											 href="/services/matte-paint-special/">Matte Paint Special</a></li>
 									</ul>
 								</li>
 								<li id="menu-item-1583" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a href="gallery/">Gallery</a></li>
@@ -295,8 +297,9 @@
 										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1669"><a href="/services/blackout-package/">Blackout
 												Package</a></li>
 										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a href="/services/camera-installation/">Dash
-												Cam
-												Installation</a></li>
+												Cam Installation</a></li>
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a href="/services/matte-paint-special/">Matte
+												Paint Special</a></li>
 									</ul>
 								</li>
 								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a href="gallery/">Gallery</a></li>
@@ -640,12 +643,12 @@
 				<div class="vc_row wpb_row vc_row-fluid page-margin-top-section">
 					<div class="wpb_column vc_column_container vc_col-sm-12">
 						<div class="wpb_wrapper">
-							<h2 class=" box-header">WHY CHOOSE US?</h2>
+							<h2 class=" box-header">WHY CHOOSE US?<br /><span class="tiny">&nbsp;&nbsp;COLLISION REPAIR – AUTO PAINTING –
+									FENDERS & BUMPERS</span></h2>
+
 							<div class="wpb_text_column wpb_content_element  description align-center">
 								<div class="wpb_wrapper">
-									<p>We are one of the leading auto repair shops serving customers in the greater San Diego area.<br />
-										All of our services are performed by highly qualified mechanics.</p>
-
+									<p>Auto Body Repair shops serving customers in the greater San Diego Area and Orange Country.</p>
 								</div>
 							</div>
 							<div class="vc_row wpb_row vc_inner vc_row-fluid page-margin-top">
@@ -657,10 +660,8 @@
 													<div class="sl-small-user-chat"></div>
 												</div>
 												<h4 class="box-header">EVERY JOB IS PERSONAL</h4>
-												<p></p>
 												<p>If you want the quality you would expect from a dealership, but with a more personal and friendly
 													atmosphere, come see us at Accident Pros.</p>
-												<p></p>
 											</div>
 										</div>
 									</div>
@@ -673,10 +674,10 @@
 													<div class="sl-small-wrench-screwdriver"></div>
 												</div>
 												<h4 class="box-header">BEST MATERIALS</h4>
-												<p></p>
-												<p>We've invested in all the latest specialist tools and diagnostic software that is specifically
-													tailored for the software in every vehicle.</p>
-												<p></p>
+												<p>Accident Pros provides quality auto paint touch-ups and paintwork restoration at low prices. Paintwork
+													restoration has to be seen to be believed. Most people are amazed at how we can take even the most faded
+													dull or scratched paintwork and make it look like new. Over the next few pages we will show you in photos
+													just what can be achieved with our range of techniques.</p>
 											</div>
 										</div>
 									</div>
@@ -689,10 +690,8 @@
 													<div class="sl-small-truck-tow"></div>
 												</div>
 												<h4 class="box-header">PROFESSIONAL STANDARDS</h4>
-												<p></p>
 												<p>At Accident Pros, we are capable of servicing a variety of models and we only do the work that is
 													actually needed to fix your vehicle's problem.</p>
-												<p></p>
 											</div>
 										</div>
 									</div>
@@ -704,11 +703,11 @@
 				<div class="vc_row wpb_row vc_row-fluid page-margin-top-section">
 					<div class="wpb_column vc_column_container vc_col-sm-12">
 						<div class="wpb_wrapper">
-							<h2 class=" box-header">AUTO REPAIR SERVICES</h2>
+							<h2 class=" box-header">FEATURE SERVICES</h2>
 							<div class="wpb_text_column wpb_content_element  description align-center">
 								<div class="wpb_wrapper">
-									<p>We offer a full range of garage services to drivers located in the greater San Diego area.<br />
-										Our professionals know how to handle a wide range of car services.</p>
+									<p>We offer a full range of garage services to drivers located in the greater San Diego area and Orange
+										County.</p>
 
 								</div>
 							</div>
@@ -750,7 +749,7 @@
 				</div>
 				<div class="vc_row wpb_row vc_row-fluid align-center margin-top-40 padding-bottom-87 full-width">
 					<div class="wpb_column vc_column_container vc_col-sm-12">
-						<div class="wpb_wrapper"><a class="more" href="#" title="VIEW ALL SERVICES"><span>VIEW ALL SERVICES</span></a></div>
+						<div class="wpb_wrapper"><a class="more" href="/services/" title="VIEW ALL SERVICES"><span>VIEW ALL SERVICES</span></a></div>
 					</div>
 				</div>
 				<div class="vc_row wpb_row vc_row-fluid padding-top-70 padding-bottom-66 vc_custom_03 vc_row-has-fill full-width cs-parallax">
@@ -822,77 +821,10 @@
 							<h2 class=" box-header">COMPANY OVERVIEW</h2>
 							<div class="wpb_text_column wpb_content_element  description align-center">
 								<div class="wpb_wrapper">
-									<p>We can help you with everything from an oil change to an engine change.<br />
-										Whether your car is a foreign or domestic vehicle, We got you covered.</p>
+									<p>We can help you with everything from small door dings to complete auto body repair.<br />
+										Whether your car is a foreign or domestic vehicle, we got you covered with best in industry materials and
+										service. 100% satisfaction guarantee.</p>
 
-								</div>
-							</div>
-							<div class="vc_row wpb_row vc_inner vc_row-fluid page-margin-top-section">
-								<div class="wpb_column vc_column_container vc_col-sm-4">
-									<div class="vc_column-inner ">
-										<div class="wpb_wrapper">
-											<div class="feature-item">
-												<h5>CAR AUDIO SERVICE</h5>
-												<div class="icon sl-small-car-audio"></div>
-												<p></p>
-												<p>Services consequat luctus at justo auctor metus est donec. Tempus terminal morbi nulla donec elite
-													maecenas modern forte elementum vehicula.</p>
-												<p></p>
-											</div>
-											<div class="feature-item">
-												<h5>CAR A/C RECHARGE</h5>
-												<div class="icon sl-small-air-conditioning"></div>
-												<p></p>
-												<p>Services consequat luctus at justo auctor metus est donec. Tempus terminal morbi nulla donec elite
-													maecenas modern forte elementum vehicula.</p>
-												<p></p>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="wpb_column vc_column_container vc_col-sm-4">
-									<div class="vc_column-inner ">
-										<div class="wpb_wrapper">
-											<div class="feature-item">
-												<h5>OIL CHANGE</h5>
-												<div class="icon sl-small-car-oil"></div>
-												<p></p>
-												<p>Services consequat luctus at justo auctor metus est donec. Tempus terminal morbi nulla donec elite
-													maecenas modern forte elementum vehicula.</p>
-												<p></p>
-											</div>
-											<div class="feature-item">
-												<h5>PARKING SENSORS CALIBRATION</h5>
-												<div class="icon sl-small-parking-sensor"></div>
-												<p></p>
-												<p>Services consequat luctus at justo auctor metus est donec. Tempus terminal morbi nulla donec elite
-													maecenas modern forte elementum vehicula.</p>
-												<p></p>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="wpb_column vc_column_container vc_col-sm-4">
-									<div class="vc_column-inner ">
-										<div class="wpb_wrapper">
-											<div class="feature-item">
-												<h5>ENGINE DIAGNOSTICS</h5>
-												<div class="icon sl-small-signal-warning"></div>
-												<p></p>
-												<p>Services consequat luctus at justo auctor metus est donec. Tempus terminal morbi nulla donec elite
-													maecenas modern forte elementum vehicula.</p>
-												<p></p>
-											</div>
-											<div class="feature-item">
-												<h5>CAR BATTERY REPAIRS</h5>
-												<div class="icon sl-small-car-battery"></div>
-												<p></p>
-												<p>Services consequat luctus at justo auctor metus est donec. Tempus terminal morbi nulla donec elite
-													maecenas modern forte elementum vehicula.</p>
-												<p></p>
-											</div>
-										</div>
-									</div>
 								</div>
 							</div>
 						</div>
@@ -915,7 +847,7 @@
 							<h2 class=" box-header page-margin-top-section">VEHICLES SERVICED</h2>
 							<div class="wpb_text_column wpb_content_element  description align-center">
 								<div class="wpb_wrapper">
-									<p>We provide top notch maintenance service for all types of vehicles.<br />
+									<p>We provide top notch service for all types of vehicles.<br />
 										We are certified to service and repair the following makes:</p>
 
 								</div>
@@ -978,7 +910,7 @@
 								<div class="wpb_wrapper">
 									<p>We are here to help you get back on the road. your satisfaction is our number one priority. With our
 										uniformed crew and professional service you can trust you’ll always get first class workmanship and writing
-										service backed by a written lifetime guarantee here at AcciDent Pros.</p>
+										service backed by a written guarantee here at AcciDent Pros.</p>
 
 								</div>
 							</div>
@@ -1080,7 +1012,7 @@
 					<div class='vc_col-sm-4 wpb_column vc_column_container widget cs_contact_info_widget'>
 						<div class="contact-details-box sl-small-certificate">
 							<p>All Services Backed by<br />
-								a Written Lifetime Guarantee</p>
+								a Written Guarantee</p>
 						</div>
 					</div>
 					<div class='vc_col-sm-4 wpb_column vc_column_container widget cs_contact_info_widget'>
@@ -1098,12 +1030,13 @@
 						<ul class="list simple margin-top-20 clearfix">
 							<li><span>San Diego:</span>(858) 455-9110</li>
 							<li><span>San Marcos:</span>(760) 688-7330</li>
-							<li><span>Santee:</span>(619) 749-7899</li></br>
+							<li><span>Santee:</span>(619) 749-7899</li>
+							<li><span>Lake Forest:</span>(949) 470-1600</li></br>
 							<li><span style="padding-left:30%;font-weight: bold;">E-mail:</span><a href="mailto:accidentprosusa@gmail.com">AccidentProsUSA@gmail.com</a></li>
 						</ul>
 						<ul class="social-icons gray margin-top-26 clearfix">
-							<li><a target='_blank' href="#" class="social-facebook"></a></li>
-							<li><a target='_blank' href="#" class="social-twitter"></a></li>
+							<li style="background-color: #3b5998;"><a target='_blank' href="#" class="social-facebook"></a></li>
+							<li style="background-color: #00aced;"><a target='_blank' href="#" class="social-twitter"></a></li>
 							<li><a target='_blank' href="#" class="social-instagram"></a></li>
 							<li><a target='_blank' href="#" class="social-yelp"></a></li>
 						</ul>
