--- a/locations/index.html
+++ b/locations/index.html
@@ -229,6 +229,8 @@
                                                 href="/services/auto-detailing/">Auto Detailing</a></li>
                                         <li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
                                                 href="/services/headlight-restoration/">Headlight Restoration</a></li>
+                                        <li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+                                                href="/services/matte-paint-special/">Matte Paint Special</a></li>
                                     </ul>
                                 </li>
                                 <li id="menu-item-1583" class="menu-item menu-item-type-post_type menu-item-object-page page_item page-item-148 menu-item-1583"><a
@@ -275,6 +277,8 @@
                                                 href="/services/auto-detailing/">Auto Detailing</a></li>
                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
                                                 href="/services/headlight-restoration/">Headlight Restoration</a></li>
+                                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+                                                href="/services/matte-paint-special/">Matte Paint Special</a></li>
                                     </ul>
                                 </li>
                                 <li class="menu-item menu-item-type-post_type menu-item-object-page page_item page-item-148 current_page_item menu-item-1583"><a
