--- a/services/auto-body-repair/index.html
+++ b/services/auto-body-repair/index.html
@@ -230,6 +230,8 @@
 											 href="/services/blackout-package/">Blackout Package</a></li>
 										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
 											 href="/services/camera-installation/">Dash Cam Installation</a></li>
+										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+											 href="/services/matte-paint-special/">Matte Paint Special</a></li>
 									</ul>
 								</li>
 								<li id="menu-item-1583" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a href="/gallery/">Gallery</a></li>
@@ -275,6 +277,8 @@
 												Package</a></li>
 										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a href="/services/camera-installation/">Dash
 												Cam Installation</a></li>
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a href="/services/matte-paint-special/">Matte
+												Paint Special</a></li>
 									</ul>
 								</li>
 								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a href="/gallery/">Gallery</a></li>
@@ -347,6 +351,8 @@
 												 href="/services/blackout-package/">Blackout Package</a></li>
 											<li id="menu-item-991" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-899"><a
 												 href="/services/camera-installation/">Dash Cam Installation</a></li>
+											<li id="menu-item-991" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-899"><a
+												 href="/services/matte-paint-special/">Matte Paint Special</a></li>
 										</ul>
 									</div>
 								</div>
@@ -447,7 +453,7 @@
 											</div>
 										</div>
 
-										<h3 class=" box-header page-margin-top">PRICING<span class="tiny">&nbsp;&nbsp;(Estimates)</span></h3>
+										<h3 class=" box-header page-margin-top">PRICING</h3>
 										<div class="wpb_raw_code wpb_content_element wpb_raw_html">
 											<div class="wpb_wrapper">
 												<table class="margin-top-40">
