--- a/services/paint-scratch-repair/index.html
+++ b/services/paint-scratch-repair/index.html
@@ -230,6 +230,8 @@
 											 href="/services/blackout-package/">Blackout Package</a></li>
 										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
 											 href="/services/camera-installation/">Dash Cam Installation</a></li>
+										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+											 href="/services/matte-paint-special/">Matte Paint Special</a></li>
 									</ul>
 								</li>
 								<li id="menu-item-1583" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a href="/gallery/">Gallery</a></li>
@@ -275,6 +277,10 @@
 												Package</a></li>
 										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a href="/services/camera-installation/">Dash
 												Cam Installation</a></li>
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a href="/services/matte-paint-special/">Matte
+												Paint Special</a></li>
+										<li id="menu-item-991" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-899"><a
+											 href="/services/matte-paint-special/">Matte Paint Special</a></li>
 									</ul>
 								</li>
 								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a href="/gallery/">Gallery</a></li>
@@ -347,6 +353,8 @@
 												 href="/services/blackout-package/">Blackout Package</a></li>
 											<li id="menu-item-992" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-990"><a
 												 href="/services/camera-installation/">Dash Cam Installation</a></li>
+											<li id="menu-item-991" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-899"><a
+												 href="/services/matte-paint-special/">Matte Paint Special</a></li>
 										</ul>
 									</div>
 								</div>
