--- a/services/paintless-dent-repair/index.html
+++ b/services/paintless-dent-repair/index.html
@@ -230,6 +230,8 @@
 											 href="/services/blackout-package/">Blackout Package</a></li>
 										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
 											 href="/services/camera-installation/">Dash Cam Installation</a></li>
+										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+											 href="/services/matte-paint-special/">Matte Paint Special</a></li>
 									</ul>
 								</li>
 								<li id="menu-item-1583" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a href="/gallery/">Gallery</a></li>
@@ -275,6 +277,8 @@
 												Package</a></li>
 										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a href="/services/camera-installation/">Dash
 												Cam Installation</a></li>
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a href="/services/matte-paint-special/">Matte
+												Paint Special</a></li>
 									</ul>
 								</li>
 								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a href="/gallery/">Gallery</a></li>
@@ -347,6 +351,8 @@
 												 href="/services/blackout-package/">Blackout Package</a></li>
 											<li id="menu-item-992" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-990"><a
 												 href="/services/camera-installation/">Dash Cam Installation</a></li>
+											<li id="menu-item-991" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-899"><a
+												 href="/services/matte-paint-special/">Matte Paint Special</a></li>
 										</ul>
 									</div>
 								</div>
@@ -397,27 +403,6 @@
 													Most small car dents can easily be removed using paintless dent repair technology, including door dings,
 													small hood dents, and even creases.</p>
 
-											</div>
-										</div>
-										<h3 class=" box-header page-margin-top">PRICING</h3>
-										<div class="wpb_raw_code wpb_content_element wpb_raw_html">
-											<div class="wpb_wrapper">
-												<table class="margin-top-40">
-													<tbody>
-														<tr>
-															<td>Front Brakes Repair</td>
-															<td>$49.95</td>
-														</tr>
-														<tr>
-															<td>Rear Brakes Repair</td>
-															<td>$59.95</td>
-														</tr>
-														<tr>
-															<td>Rear Brakes Shoes</td>
-															<td>$65.25</td>
-														</tr>
-													</tbody>
-												</table>
 											</div>
 										</div>
 										<a class="more mobe-only page-margin-top" href="/appointment/" title="MAKE APPOINTMENT"><span>MAKE AN
