--- a/about/index.html
+++ b/about/index.html
@@ -17,7 +17,8 @@
     <link rel='dns-prefetch' href='//maps.google.com' />
     <link rel='dns-prefetch' href='//fonts.googleapis.com' />
     <link rel='dns-prefetch' href='//s.w.org' />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+        crossorigin="anonymous">
     <script type="text/javascript">
         window._wpemojiSettings = {
             "baseUrl": "https:\/\/s.w.org\/images\/core\/emoji\/11\/72x72\/",
@@ -47,8 +48,8 @@
                             55356, 57332, 56128, 56423, 56128, 56418, 56128, 56421, 56128, 56430, 56128,
                             56423, 56128, 56447
                         ], [55356, 57332, 8203, 56128, 56423, 8203, 56128, 56418, 8203, 56128, 56421, 8203,
-                            56128, 56430, 8203, 56128, 56423, 8203, 56128, 56447
-                        ]), !b);
+                                56128, 56430, 8203, 56128, 56423, 8203, 56128, 56447
+                            ]), !b);
                     case "emoji":
                         return b = d([55358, 56760, 9792, 65039], [55358, 56760, 8203, 9792, 65039]), !b
                 }
@@ -62,9 +63,9 @@
             var g, h, i, j, k = b.createElement("canvas"),
                 l = k.getContext && k.getContext("2d");
             for (j = Array("flag", "emoji"), c.supports = {
-                    everything: !0,
-                    everythingExceptFlag: !0
-                }, i = 0; i < j.length; i++) c.supports[j[i]] = e(j[i]), c.supports.everything = c.supports.everything &&
+                everything: !0,
+                everythingExceptFlag: !0
+            }, i = 0; i < j.length; i++) c.supports[j[i]] = e(j[i]), c.supports.everything = c.supports.everything &&
                 c.supports[j[i]], "flag" !== j[i] && (c.supports.everythingExceptFlag = c.supports.everythingExceptFlag &&
                     c.supports[j[i]]);
             c.supports.everythingExceptFlag = c.supports.everythingExceptFlag && !c.supports.flag, c.DOMReady = !1, c.readyCallback =
@@ -74,9 +75,9 @@
                     c.readyCallback()
                 }, b.addEventListener ? (b.addEventListener("DOMContentLoaded", h, !1), a.addEventListener("load",
                     h, !1)) : (a.attachEvent("onload", h), b.attachEvent("onreadystatechange", function () {
-                    "complete" === b.readyState && c.readyCallback()
-                })), g = c.source || {}, g.concatemoji ? f(g.concatemoji) : g.wpemoji && g.twemoji && (f(g.twemoji),
-                    f(g.wpemoji)))
+                        "complete" === b.readyState && c.readyCallback()
+                    })), g = c.source || {}, g.concatemoji ? f(g.concatemoji) : g.wpemoji && g.twemoji && (f(g.twemoji),
+                        f(g.wpemoji)))
         }(window, document, window._wpemojiSettings);
     </script>
     <style type="text/css">
@@ -147,16 +148,16 @@
                     s = 0,
                     h = 0;
                 if (e.responsiveLevels && (jQuery.each(e.responsiveLevels, function (e, f) {
-                        f > i && (t = r = f, l = e), i > f && f > r && (r = f, n = e)
-                    }), t > r && (l = n)), f = e.gridheight[l] || e.gridheight[0] || e.gridheight, s = e.gridwidth[l] ||
-                    e.gridwidth[0] || e.gridwidth, h = i / s, h = h > 1 ? 1 : h, f = Math.round(h * f), "fullscreen" ==
+                    f > i && (t = r = f, l = e), i > f && f > r && (r = f, n = e)
+                }), t > r && (l = n)), f = e.gridheight[l] || e.gridheight[0] || e.gridheight, s = e.gridwidth[l] ||
+                e.gridwidth[0] || e.gridwidth, h = i / s, h = h > 1 ? 1 : h, f = Math.round(h * f), "fullscreen" ==
                     e.sliderLayout) {
                     var u = (e.c.width(), jQuery(window).height());
                     if (void 0 != e.fullScreenOffsetContainer) {
                         var c = e.fullScreenOffsetContainer.split(",");
                         if (c) jQuery.each(c, function (e, i) {
-                                u = jQuery(i).length > 0 ? u - jQuery(i).outerHeight(!0) : u
-                            }), e.fullScreenOffset.split("%").length > 1 && void 0 != e.fullScreenOffset && e.fullScreenOffset
+                            u = jQuery(i).length > 0 ? u - jQuery(i).outerHeight(!0) : u
+                        }), e.fullScreenOffset.split("%").length > 1 && void 0 != e.fullScreenOffset && e.fullScreenOffset
                             .length > 0 ? u -= jQuery(window).height() * parseInt(e.fullScreenOffset, 0) / 100 : void 0 !=
                             e.fullScreenOffset && e.fullScreenOffset.length > 0 && (u -= parseInt(e.fullScreenOffset, 0))
                     }
@@ -247,6 +248,8 @@
                                                 href="/services/blackout-package/">Blackout Package</a></li>
                                         <li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
                                                 href="/services/camera-installation/">Dash Cam Installation</a></li>
+                                        <li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+                                                href="/services/matte-paint-special/">Matte Paint Special</a></li>
                                     </ul>
                                 </li>
                                 <li id="menu-item-1583" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a
@@ -297,6 +300,8 @@
                                                 href="/services/blackout-package/">Blackout Package</a></li>
                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
                                                 href="/services/camera-installation/">Dash Cam Installation</a></li>
+                                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+                                                href="/services/matte-paint-special/">Matte Paint Special</a></li>
                                     </ul>
                                 </li>
                                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a
@@ -529,12 +534,14 @@
                     </div>
                     <div class='vc_col-sm-3 wpb_column vc_column_container widget cs_contact_details_widget'>
                         <h6 class='box-header'>LOCATIONS</h6>
-                        <button class="accordionz margin-top-20"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>SAN DIEGO, CA</h7></button>
+                        <button class="accordionz margin-top-20"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>SAN
+                                DIEGO, CA</h7></button>
                         <div class="panel">
                             <p>6696 Miramar Road L</br> San Diego, CA 92121</p>
                         </div>
 
-                        <button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>SAN MARCOS, CA</h7></button>
+                        <button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>SAN MARCOS,
+                                CA</h7></button>
                         <div class="panel">
                             <p>738 W San Marcos Blvd</br> San Marcos, CA 92078</p>
                         </div>
@@ -543,8 +550,9 @@
                         <div class="panel">
                             <p>10147 Mission Gorge Rd</br> Santee, CA 92071</p>
                         </div>
-						
-						<button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>LAKE FOREST, CA</h7></button>
+
+                        <button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>LAKE
+                                FOREST, CA</h7></button>
                         <div class="panel">
                             <p>25252 Jeronimo Rd</br> Lake Forest, CA 92630</p>
                         </div>
