--- a/services/camera-installation/index.html
+++ b/services/camera-installation/index.html
@@ -231,6 +231,8 @@
                         href="/services/blackout-package/">Blackout Package</a></li>
                     <li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item menu-item-1670"><a
                         href="/services/camera-installation/">Dash Cam Installation</a></li>
+                    <li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+                        href="/services/matte-paint-special/">Matte Paint Special</a></li>
                   </ul>
                 </li>
                 <li id="menu-item-1583" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a
@@ -282,6 +284,8 @@
                     <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item menu-item-1670"><a
                         href="/services/camera-installation/">Dash
                         Cam Installation</a></li>
+                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a href="/services/matte-paint-special/">Matte
+                        Paint Special</a></li>
                   </ul>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a href="/gallery/">Gallery</a></li>
@@ -357,6 +361,8 @@
                           href="/services/blackout-package/">Blackout Package</a></li>
                       <li id="menu-item-992" class="menu-item menu-item-type-post_type menu-item-object-ql_services current-menu-item menu-item-990"><a
                           href="/services/camera-installation/">Dash Cam Installation</a></li>
+                      <li id="menu-item-991" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-899"><a
+                          href="/services/matte-paint-special/">Matte Paint Special</a></li>
                     </ul>
                   </div>
                 </div>
