Too many options on Appointment form

--- a/appointment/index.html
+++ b/appointment/index.html
@@ -469,49 +469,87 @@
                                                 </select>
                                             </div><label class=" box-header margin-bottom-20 page-margin-top">SELECT
                                                 SERVICES NEEDED</label>
-                                            <div class="cost-calculator-box clearfix float"><input id="air-conditioning"
-                                                    class="cost-slider-input big type-checkbox" name="air-conditioning"
+                                            <div class="cost-calculator-box clearfix float"><input id="auto-body-repair"
+                                                    class="cost-slider-input big type-checkbox" name="auto-body-repair"
                                                     type="checkbox" value="0" data-value="1" placeholder="">
-                                                <label class="checkbox-label template-bullet" for="air-conditioning"><span
-                                                        class="checkbox-box"></span>Air Conditioning</label></div>
-                                            <div class="cost-calculator-box clearfix float no-border-left"><input id="brakes-repair"
-                                                    class="cost-slider-input big type-checkbox" name="brakes-repair"
+                                                <label class="checkbox-label template-bullet" for="auto-body-repair">
+                                                    <span class="checkbox-box"></span>Auto Body Repair</label>
+                                            </div>
+                                            <div class="cost-calculator-box clearfix float no-border-left"><input id="bumper-repair"
+                                                    class="cost-slider-input big type-checkbox" name="bumper-repair"
+                                                    type="checkbox" value="0" data-value="1" placeholder="">
+                                                <label class="checkbox-label template-bullet" for="bumper-repair">
+                                                    <span class="checkbox-box"></span>Bumper Repair</label>
+                                            </div>
+                                            <div class="cost-calculator-box clearfix float no-border-left"><input id="auto-dent-repair"
+                                                    class="cost-slider-input big type-checkbox" name="auto-dent-repair"
                                                     type="checkbox" value="1" data-value="1" placeholder="">
-                                                <label class="checkbox-label template-bullet" for="brakes-repair"><span
-                                                        class="checkbox-box"></span>Brakes Repair</label></div>
-                                            <div class="cost-calculator-box clearfix float no-border-left"><input id="engine-diagnostics"
-                                                    class="cost-slider-input big type-checkbox" name="engine-diagnostics"
-                                                    type="checkbox" value="0" data-value="1" placeholder="">
-                                                <label class="checkbox-label template-bullet" for="engine-diagnostics"><span
-                                                        class="checkbox-box"></span>Engine Diagnostics</label></div>
-                                            <div class="cost-calculator-box clearfix float no-border-top"><input id="heating-cooling"
-                                                    class="cost-slider-input big type-checkbox" name="heating-cooling"
+                                                <label class="checkbox-label template-bullet" for="auto-dent-repair">
+                                                    <span class="checkbox-box"></span>Auto Dent Repair</label>
+                                            </div>
+                                            <div class="cost-calculator-box clearfix float no-border-top"><input id="auto-painting"
+                                                    class="cost-slider-input big type-checkbox" name="auto-painting"
                                                     type="checkbox" value="1" data-value="1" placeholder="">
-                                                <label class="checkbox-label template-bullet" for="heating-cooling"><span
-                                                        class="checkbox-box"></span>Heating&amp;Cooling</label></div>
+                                                <label class="checkbox-label template-bullet" for="auto-painting">
+                                                    <span class="checkbox-box"></span>Auto Painting</label>
+                                            </div>
                                             <div class="cost-calculator-box clearfix float no-border-top no-border-left"><input
-                                                    id="oil-lube-filters" class="cost-slider-input big type-checkbox"
-                                                    name="oil-lube-filters" type="checkbox" value="1" data-value="1"
+                                                    id="paintless-dent-repair" class="cost-slider-input big type-checkbox"
+                                                    name="paintless-dent-repair" type="checkbox" value="1" data-value="1"
                                                     placeholder="">
-                                                <label class="checkbox-label template-bullet" for="oil-lube-filters"><span
-                                                        class="checkbox-box"></span>Oil, Lube &amp; Filters</label></div>
+                                                <label class="checkbox-label template-bullet" for="paintless-dent-repair">
+                                                    <span class="checkbox-box"></span>Paintless Dent Repair</label>
+                                            </div>
                                             <div class="cost-calculator-box clearfix float no-border-top no-border-left"><input
-                                                    id="steering-suspension" class="cost-slider-input big type-checkbox"
-                                                    name="steering-suspension" type="checkbox" value="0" data-value="1"
+                                                    id="paint-scratch-repair" class="cost-slider-input big type-checkbox"
+                                                    name="paint-scratch-repair" type="checkbox" value="0" data-value="1"
                                                     placeholder="">
-                                                <label class="checkbox-label template-bullet" for="steering-suspension"><span
-                                                        class="checkbox-box"></span>Steering&amp;Suspension</label></div>
-                                            <div class="cost-calculator-box clearfix float no-border-top"><input id="transmission-repair"
-                                                    class="cost-slider-input big type-checkbox" name="transmission-repair"
+                                                <label class="checkbox-label template-bullet" for="paint-scratch-repair">
+                                                    <span class="checkbox-box"></span>Paint Scratch Repair</label>
+                                            </div>
+                                            <div class="cost-calculator-box clearfix float no-border-top"><input id="rim-repair"
+                                                    class="cost-slider-input big type-checkbox" name="rim-repair" type="checkbox"
+                                                    value="0" data-value="1" placeholder="">
+                                                <label class="checkbox-label template-bullet" for="rim-repair">
+                                                    <span class="checkbox-box"></span>Rim Repair</label>
+                                            </div>
+                                            <div class="cost-calculator-box clearfix float no-border-top no-border-left"><input
+                                                    id="windshield-repair" class="cost-slider-input big type-checkbox"
+                                                    name="windshield-repair" type="checkbox" value="0" data-value="1"
+                                                    placeholder="">
+                                                <label class="checkbox-label template-bullet" for="windshield-repair">
+                                                    <span class="checkbox-box"></span>Windshield Repair / Replace</label>
+                                            </div>
+                                            <div class="cost-calculator-box clearfix float no-border-left"><input id="auto-detailing"
+                                                    class="cost-slider-input big type-checkbox" name="auto-detailing"
                                                     type="checkbox" value="0" data-value="1" placeholder="">
-                                                <label class="checkbox-label template-bullet" for="transmission-repair"><span
-                                                        class="checkbox-box"></span>Transmission Repair</label></div>
-                                            <div class="cost-calculator-box clearfix float no-border-top no-border-left"><input
-                                                    id="wheel-alignment" class="cost-slider-input big type-checkbox"
-                                                    name="wheel-alignment" type="checkbox" value="0" data-value="1"
-                                                    placeholder="">
-                                                <label class="checkbox-label template-bullet" for="wheel-alignment"><span
-                                                        class="checkbox-box"></span>Wheel Alignment</label></div>
+                                                <label class="checkbox-label template-bullet" for="auto-detailing">
+                                                    <span class="checkbox-box"></span>Auto Detailing</label>
+                                            </div>
+                                            <div class="cost-calculator-box clearfix float no-border-left"><input id="headlight-restoration"
+                                                    class="cost-slider-input big type-checkbox" name="headlight-restoration"
+                                                    type="checkbox" value="0" data-value="1" placeholder="">
+                                                <label class="checkbox-label template-bullet" for="headlight-restoration">
+                                                    <span class="checkbox-box"></span>Headlight Restoration</label>
+                                            </div>
+                                            <div class="cost-calculator-box clearfix float no-border-left"><input id="blackout-package"
+                                                    class="cost-slider-input big type-checkbox" name="blackout-package"
+                                                    type="checkbox" value="0" data-value="1" placeholder="">
+                                                <label class="checkbox-label template-bullet" for="blackout-package">
+                                                    <span class="checkbox-box"></span>Blackout Package</label>
+                                            </div>
+                                            <div class="cost-calculator-box clearfix float no-border-left"><input id="dashcam-installation"
+                                                    class="cost-slider-input big type-checkbox" name="dashcam-installation"
+                                                    type="checkbox" value="0" data-value="1" placeholder="">
+                                                <label class="checkbox-label template-bullet" for="dashcam-installation">
+                                                    <span class="checkbox-box"></span>Dash Cam Installation</label>
+                                            </div>
+                                            <div class="cost-calculator-box clearfix float no-border-left"><input id="matte-paint-special"
+                                                    class="cost-slider-input big type-checkbox" name="matte-paint-special"
+                                                    type="checkbox" value="0" data-value="1" placeholder="">
+                                                <label class="checkbox-label template-bullet" for="matte-paint-special">
+                                                    <span class="checkbox-box"></span>Matte Paint Special</label>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
